Corrected button spacing

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -10,6 +10,7 @@ body {
 .new-note {
   display: none;
   cursor: pointer;
+  margin-right: 20px;
 }
 
 .icons i {
